--- a/{{cookiecutter.app_name}}/setup.cfg
+++ b/{{cookiecutter.app_name}}/setup.cfg
@@ -3,3 +3,9 @@ universal=1
 
 [metadata]
 description-file=README.md
+
+[devpi:upload]
+# Options for the devpi: PyPI serer and packaging tool
+# VCS export must be deactivated since we are using setuptools-scm
+no-vcs = 1
+formats = bdist_wheel
